minor ui fix: spacing, shadow,

--- a/app/globals.css
+++ b/app/globals.css
@@ -63,6 +63,16 @@
   }
 }
 
+/* __________ Custom Styles __________ */
+.header-bg-glass {
+  background: rgba(255, 255, 255, 0.80);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  @apply shadow
+
+}
+
 
 /* __________ Header Styles __________ */
 .cta-button {
@@ -80,7 +90,7 @@ header a {
 
 
 header .mobile-menu-navigation {
-  @apply absolute w-full bg-white shadow-xl;
+  @apply absolute w-full bg-white shadow-lg ;
   @apply top-full left-0;
 
 }
@@ -93,6 +103,7 @@ header .mobile-menu-navigation {
 
 header .mobile-menu-navigation.open {
   max-height: 500px;
+
 }
 
 
@@ -171,7 +182,7 @@ header svg.open .line3 {
 }
 
 .animated-bg {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
